--- a/notesapp/package.json
+++ b/notesapp/package.json
@@ -10,6 +10,7 @@
     "nanoid": "^3.1.20",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-draggable": "^4.4.3",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
